k8s/app.clusterIP.yml
apiVersion: 'v1'
kind: Service
metadata:
  name: app-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    component: backend
