k8s/app.nodePort.yml
apiVersion: 'v1'
kind: Service
metadata:
  name: app-node-port
spec:
  type: NodePort
  ports:
    - port: 3050
      targetPort: 3000
      nodePort: 31111
  selector:
    component: backend
