k8s/ingress.yml
apiVersion: 'networking.k8s.io/v1'
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-cluster-ip
                port:
                  number: 3000
